weapon colors update